...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:id="@+id/book_details"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".presentation.bookTab.BookDetailsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/pick_depart_date"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="10dp"
        android:padding="@dimen/activity_vertical_margin"
...
            android:layout_height="match_parent"
            app:icon="@drawable/ic_round_add_24"
            app:iconSize="35dp" />
    </LinearLayout>

    <Button
        android:id="@+id/search_flights_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:enabled="false"
        android:layout_margin="10dp"
...
