...
        android:id="@+id/search_results_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/header_layout_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/window_image"
                android:layout_width="match_parent"
...
                android:text="@string/no_flights_found"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/search_results_text"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:choiceMode="singleChoice"
                android:focusable="false"
...
                android:textSize="22sp" />

        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <Button
        android:id="@+id/book_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/book_flight"
...
